--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Asaurus/vendor/spdlog"]
 	path = Asaurus/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Asaurus/vendor/GLFW"]
+	path = Asaurus/vendor/GLFW
+	url = https://github.com/Logstor/glfw
