ImGui can now utilize docking and get pulled outside the main window.

--- a/Asaurus/Asaurus.vcxproj
+++ b/Asaurus/Asaurus.vcxproj
@@ -165,7 +165,6 @@
     <ClInclude Include="src\Asaurus\Log.h" />
     <ClInclude Include="src\Asaurus\MouseButtonCodes.h" />
     <ClInclude Include="src\Asaurus\Window.h" />
-    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\aspch.h" />
@@ -580,11 +579,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Asaurus\Application.cpp" />
+    <ClCompile Include="src\Asaurus\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Asaurus\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Asaurus\Layer\Layer.cpp" />
     <ClCompile Include="src\Asaurus\Layer\LayerStack.cpp" />
     <ClCompile Include="src\Asaurus\Log.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\aspch.cpp">
@@ -605,4 +604,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
