--- a/Asaurus/Asaurus.vcxproj.filters
+++ b/Asaurus/Asaurus.vcxproj.filters
@@ -19,9 +19,6 @@
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Platform\OpenGL">
-      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
@@ -95,9 +92,6 @@
     </ClInclude>
     <ClInclude Include="src\Asaurus\Window.h">
       <Filter>src\Asaurus</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1337,6 +1331,9 @@
     <ClCompile Include="src\Asaurus\Application.cpp">
       <Filter>src\Asaurus</Filter>
     </ClCompile>
+    <ClCompile Include="src\Asaurus\ImGui\ImGuiBuild.cpp">
+      <Filter>src\Asaurus\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Asaurus\ImGui\ImGuiLayer.cpp">
       <Filter>src\Asaurus\ImGui</Filter>
     </ClCompile>
@@ -1348,9 +1345,6 @@
     </ClCompile>
     <ClCompile Include="src\Asaurus\Log.cpp">
       <Filter>src\Asaurus</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
