--- a/Asaurus/Asaurus.vcxproj
+++ b/Asaurus/Asaurus.vcxproj
@@ -155,7 +155,9 @@
     <ClInclude Include="src\Asaurus\Layer\LayerStack.h" />
     <ClInclude Include="src\Asaurus\Log.h" />
     <ClInclude Include="src\Asaurus\MouseButtonCodes.h" />
+    <ClInclude Include="src\Asaurus\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Asaurus\Window.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\aspch.h" />
@@ -575,6 +577,7 @@
     <ClCompile Include="src\Asaurus\Layer\Layer.cpp" />
     <ClCompile Include="src\Asaurus\Layer\LayerStack.cpp" />
     <ClCompile Include="src\Asaurus\Log.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\aspch.cpp">
