--- a/Asaurus/Asaurus.vcxproj
+++ b/Asaurus/Asaurus.vcxproj
@@ -140,6 +140,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Asaurus\Renderer\Renderer.h" />
     <ClInclude Include="src\Asaurus.h" />
     <ClInclude Include="src\Asaurus\Application.h" />
     <ClInclude Include="src\Asaurus\Core.h" />
@@ -155,9 +156,11 @@
     <ClInclude Include="src\Asaurus\Layer\LayerStack.h" />
     <ClInclude Include="src\Asaurus\Log.h" />
     <ClInclude Include="src\Asaurus\MouseButtonCodes.h" />
+    <ClInclude Include="src\Asaurus\Renderer\Buffer.h" />
     <ClInclude Include="src\Asaurus\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Asaurus\Renderer\Shader.h" />
     <ClInclude Include="src\Asaurus\Window.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -572,13 +575,16 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Asaurus\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Asaurus\Application.cpp" />
     <ClCompile Include="src\Asaurus\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Asaurus\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Asaurus\Layer\Layer.cpp" />
     <ClCompile Include="src\Asaurus\Layer\LayerStack.cpp" />
     <ClCompile Include="src\Asaurus\Log.cpp" />
+    <ClCompile Include="src\Asaurus\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Asaurus\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
