--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "Asaurus/vendor/spdlog"]
 	path = Asaurus/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+	branch = v1.x
 [submodule "Asaurus/vendor/GLFW"]
 	path = Asaurus/vendor/GLFW
 	url = https://github.com/Logstor/glfw
+	branch = master
 [submodule "Asaurus/vendor/imgui"]
 	path = Asaurus/vendor/imgui
 	url = https://github.com/TheCherno/imgui
+	branch = docking
 [submodule "Asaurus/vendor/glm"]
 	path = Asaurus/vendor/glm
 	url = https://github.com/g-truc/glm
+	branch = master
