--- a/Asaurus/Asaurus.vcxproj.filters
+++ b/Asaurus/Asaurus.vcxproj.filters
@@ -1392,6 +1392,9 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\Asaurus\Renderer\Renderer2D.h">
+      <Filter>src\Asaurus\Renderer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Asaurus\Core\Application.cpp">
@@ -1468,6 +1471,9 @@
     </ClCompile>
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Asaurus\Renderer\Renderer2D.cpp">
+      <Filter>src\Asaurus\Renderer</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
